# SeaMeInIt

./: .gitignore  .gitmodules  0001-afflec-cli.patch  0001-afflec-images-and-cli.patch  AGENTS.md  CHANGELOG.md  COMPACTIFIED_CONTEXT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPRINT.md  TODO.md  afflec3.avif  assets_FOLDER_README.md  delme.py  grep_me_PLZ_VERY_LARGE_CONTEXT.md  pyproject.toml  requirements-dev.txt
.planning/: architecture.md  body-lineage-protocol-v1-20260213.md  devlog.md  orientation-and-role-consistency-20260214.md  plan.md  seam-domain-checkpoint-20260213.md  spec.md  status.json
__context/: README.md  convo_ids.md
configs/: kernel_weights.yaml  mdl_prior.yaml
docs/: afflec_image_preprocessing.md  avatar_model.md  b_ogre_and_afflec_crown_audit_20260311.md  body_fit_and_inverse_roadmap_20260311.md  body_lineage_protocol.md  cli_reference.md  engine_integration.md  hard_layer_export.md  hard_layer_shell.md  hard_shell_clearance.md  layer_separation_contract.md  measurement_inference.md  mesh_provenance_afflec.md  ogre_artifact_diagnostics.md  pattern_flattening.md  pipeline_runner.md  rom_basis_validation.ipynb  rom_compression_and_coarse_graining.md  rom_definition.md  rom_fd_streaming.md  rom_levels_spec.md  rom_real_sampler.md  rom_sample_morphology_and_transfer_contract.md  schemas.md  seam_overlay_orientation.md  seam_pipeline_intended_vs_observed.md  seaminit_sprint0.md  solver_kernel_roadmap_note_20260310.md  sprint_rom_l1.md  undersuit_generation.md
examples/: compare_seam_solvers.py  manual_fit_demo.py  (+6 more)
(+256 files in other folders)
